* Nicer tooltips. Improved sizing logic. (marco)
* Do not popdown the frame when palettes are active. (marco)
* Add macedonian translation. (ArangelAngov)
* Add brazilian translation. (DiegoZacarao)
* Some fixes for changing the selected clipboard object. (tomeu)
* Fix palettes around the mesh edges. (edsiper)

Snapshot de8b3b4c01

* Use HAL to get battery informations. 
* Improvements in the mesh view layout.
* Hide the active palette when another popup.
* Icons in the buddy menu items