@@ -4,6 +4,7 @@
 * Add brazilian translation. (DiegoZacarao)
 * Some fixes for changing the selected clipboard object. (tomeu)
 * Fix palettes around the mesh edges. (edsiper)
+* #1930: Only take preview before closing. (tomeu)
 
 Snapshot de8b3b4c01
 
